Details
-
Bug
-
Status: Closed
-
Not Evaluated
-
Resolution: Done
-
Qt Creator 8.0.0-beta1
-
43a9278809 (qt-creator/qt-creator/8.0) 43a9278809 (qt-creator/qt-creator/master)
Description
- Valgrind memory analyzer (with, without GDB) started for manual_test_debugger_gui
- Stop analyzing by the "Stop" button
Behavior
- Application is closed
- Analyzing isn't stop and continues forever. The progress bar increases but after more than an hour doesn't reach the end.
- If close qtcreator without stopping the application by the "Stop" button inside the application output tab. Qtcreator stops only with "ctrl + C" in the terminal. Details are in the videos below. valgrind_doesnot_stop.mp4
valgrind_qtc_donot_stop.mp4
Expected behavior
- Application is stoped
- Valgrind(and GDB) is stopped, and analyzing is stopped.
Recovery
- restart qtc
Attachments
Issue Links
- relates to
-
QTCREATORBUG-27716 Qt Creator Matrix tests
-
- Reported
-
For Gerrit Dashboard: QTCREATORBUG-27714 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
416522,2 | Valgrind: Act on pressing Stop | 8.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |