Valgrind: Act on pressing Stop

Fixes: QTCREATORBUG-27714
Change-Id: I82b49df8e4ac70e095abbac31fe5fc06d0140e17
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>